--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -10,7 +10,7 @@ jobs:
     
     env:
       TWITTER_CONSUMER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
-      TWITTER_CONSUMER_API_SECRET: ${{ secrets.TWITTER__API_KEY_SECRET }}
+      TWITTER_CONSUMER_API_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
       TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
       TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
       
