--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: macOS-latest
     
     env:
-      TWITTER_CONSUMER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
-      TWITTER_CONSUMER_API_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
+      TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+      TWITTER_API_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
       TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
       TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
       
